--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
 		"format": "prettier -w ./src ./src/**/*.astro"
 	},
 	"devDependencies": {
-		"@astrojs/image": "^0.4.0",
-		"@astrojs/mdx": "^0.11.0",
+		"@astrojs/image": "latest",
+		"@astrojs/mdx": "latest",
 		"@astrojs/sitemap": "^1.0.0",
 		"@astrojs/tailwind": "^1.0.0",
 		"@tailwindcss/aspect-ratio": "^0.4.0",
@@ -21,7 +21,7 @@
 		"@types/prettier": "^2.7.0",
 		"@typescript-eslint/eslint-plugin": "^5.36.1",
 		"@typescript-eslint/parser": "^5.36.1",
-		"astro": "1.1.3",
+		"astro": "latest",
 		"astro-eslint-parser": "^0.5.1",
 		"autoprefixer": "^10.4.8",
 		"eslint": "^8.23.0",
@@ -41,5 +41,8 @@
 		"stylelint-config-standard": "^28.0.0",
 		"tailwindcss": "^3.1.8",
 		"typescript": "^4.8.2"
+	},
+	"dependencies": {
+		"rollup": "^3.2.3"
 	}
 }
